# electronics-netshop

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
network/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py
users/migrations/: 0001_initial.py
